--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
+a {
+  text-decoration: none;
+  color: grey;
+}
 .container {
   width: 100vw;
   height: 100vh;
@@ -14,7 +18,7 @@
 }
 .up_nav {
   width: 100%;
-  height: 60%;
+  height: 70%;
   display: flex;
 }
 .up_nav img {
@@ -29,6 +33,20 @@
 }
 .down_nav {
   width: 100%;
-  height: 40%;
+  height: 30%;
   border-bottom: .5px solid lightgrey;
+}
+.down_nav h3 {
+  font-size: 15px;
+  margin-left: 20px;
+  float: left;
+}
+#ggl {
+  float: right;
+  margin-right: 20px;
+}
+#faq {
+  color: lightblue;
+  border-bottom: 4px solid lightblue;
+  height: 30px
 }
