--- a/style.css
+++ b/style.css
@@ -43,10 +43,35 @@ a {
 }
 #ggl {
   float: right;
-  margin-right: 20px;
+  margin-right: 40px;
 }
 #faq {
   color: lightblue;
   border-bottom: 4px solid lightblue;
   height: 30px
+}
+.text {
+  width: 60%;
+  height: auto;
+  margin: auto;
+  margin-bottom: 100px;
+}
+.text h1 {
+  text-align: left;
+  font-size: 30px;
+  color: grey;
+  margin-top: 50px;
+}
+.text h5 {
+  text-align: left;
+  font-size: 20px;
+  color: grey;
+  margin-top: 30px;
+  font-weight: 200;
+  line-height: 40px;
+}
+.footer {
+  width: 100%;
+  height: 40px;
+  background: lightgrey;
 }
