--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ a {
   color: grey;
 }
 .container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: auto;
 }
 .nav {
   height: 100px;
@@ -52,8 +52,8 @@ a {
 }
 .text {
   width: 60%;
-  height: auto;
   margin: auto;
+  height: auto;
   margin-bottom: 100px;
 }
 .text h1 {
@@ -62,13 +62,15 @@ a {
   color: grey;
   margin-top: 50px;
 }
-.text h5 {
+.text h2 {
   text-align: left;
   font-size: 20px;
   color: grey;
   margin-top: 30px;
   font-weight: 200;
   line-height: 40px;
+  /* display: none; */
+
 }
 .footer {
   width: 100%;
